surf.css
@font-face {
    font-family: Oswald;
    src: url(fonts/Oswald-Regular.ttf);
}

@font-face {
    font-family: OpenSans;
    src: url(fonts/Oswald-Regular.ttf);
}


header {
  background-image: url("http://lorempixel.com/image_output/nature-q-g-1920-1920-5.jpg");
  overflow: hidden;
  width: 100%;
  height: 36rem;
}
.logo {
  display: inline-block;
  color: white;
  margin-left: 12.5rem;
  margin-top: 1.3rem;

}
.logo i {
  font-size: 3.7rem;
  vertical-align: middle;
}
.logo a {
  color: white;
  text-decoration: none;
}
header h1 {
  font-family: 'Oswald';
  font-size: 6.04rem;
  letter-spacing: 1rem;
  height: 100%;
  margin: 0 auto;
  color: white;
  display: -webkit-flex;
  display:         flex;
  -webkit-align-items: center;
          align-items: center;
  -webkit-justify-content: center;
          justify-content: center;
}
.topnav {
  float: right;
  margin-right: 11.2rem;
  margin-top: 0.4rem;
}

.topnav li {
  display: inline;
  color: white;
  font-size: 1.3rem;
  letter-spacing: -0.1rem;
}
.middle {
  /*height: 69rem;*/
  background-color: pink;
}
.middle div {
  border-bottom: 1px solid gray;
  height: 69rem;
  width: 100%;
  display: inline-flex;
  margin: 0 auto;
}
.popular {
  float: left;
  max-width: 100%;
}

/*footer nav li:last-child {
  border-right: 0;
}

.footer {
  display: inline-flex;
  height: 330px;
  width: 330px;
}

footer img {
  height: 330px;
  width: 330px;
}

nav li {
  display: inline;
  position: relative;
  margin-right: 0;
  border-right: 2px solid grey;
  padding-right: 10px;
}*/

